- Implementation einiger DB funktionen - Einfügen eines "Schedule" und eines "Location" Tabs - Implementation des "Schedule" Tabs sodass man die Talks pro Tag anschauen kann.

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -1,4 +1,5 @@
 main.title=Übersicht
+locations.title=Räume
+schedule.title=Zeitplan
 speakers.title=Referenten
-talks.title=Vorträge
 tracks.title=Tracks
