--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -1,4 +1,5 @@
-main.title=Overview
-speakers.title=Speakers
-talks.title=Talks
+main.title=Übersicht
+locations.title=Räume
+schedule.title=Zeitplan
+speakers.title=Referenten
 tracks.title=Tracks
