- Changed all static texts with I18N resources (English/German)

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -1,5 +1,32 @@
+# Date / Time Formats
+dateTime.dateTime=dd.MM.yyyy HH:mm
+dateTime.time=HH:mm
+dateTime.date=dd.MM.yyyy
+datetime.dayOfWeek=EE
+
+# Main View
 main.title=Übersicht
-locations.title=Räume
+main.refresh=Aktualisieren
+
+# Schedule View
 schedule.title=Zeitplan
-speakers.title=Referenten
+
+# Locations View
+locations.title=Räume
+
+# Tracks View
 tracks.title=Tracks
+
+# Speakers View
+speakers.title=Referenten
+
+# Talks View
+talks.time=Zeit
+talks.room=Raum
+talks.track=Track
+talks.rating=Bewertung
+talks.rating.bad=Schl.
+talks.rating.avg=Mittel
+talks.rating.good=Gut
+talks.more=mehr...
+
