--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -1,5 +1,31 @@
-main.title=Übersicht
-locations.title=Räume
-schedule.title=Zeitplan
-speakers.title=Referenten
+# Date / Time Formats
+dateTime.dateTime=MM/dd/yyyy h:mm
+dateTime.time=h:mm
+dateTime.date=MM/dd/yyyy
+datetime.dayOfWeek=EE
+
+# Main View
+main.title=Overview
+main.refresh=Refresh
+
+# Schedule View
+schedule.title=Schedule
+
+# Locations View
+locations.title=Locations
+
+# Tracks View
 tracks.title=Tracks
+
+# Speakers View
+speakers.title=Speakers
+
+# Talks View
+talks.time=Time
+talks.room=Location
+talks.track=Track
+talks.rating=Rating
+talks.rating.bad=Bad
+talks.rating.avg=Avg.
+talks.rating.good=Good
+talks.more=more...
