- Added a (empty) settings view that allows configuring the application.

--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -29,3 +29,6 @@ talks.rating.bad=Bad
 talks.rating.avg=Avg.
 talks.rating.good=Good
 talks.more=more...
+
+# Settings View
+settings.title=Settings
