- Added detail views for Locations and Tracks

--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -13,9 +13,11 @@ schedule.title=Schedule
 
 # Locations View
 locations.title=Locations
+location.title=Location
 
 # Tracks View
 tracks.title=Tracks
+track.title=Track
 
 # Speakers View
 speakers.title=Speakers
