--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -13,9 +13,11 @@ schedule.title=Zeitplan
 
 # Locations View
 locations.title=Räume
+location.title=Raum
 
 # Tracks View
 tracks.title=Tracks
+track.title=Track
 
 # Speakers View
 speakers.title=Referenten
