- Added first OAuth2 parts - SimpleOAuth uses rest to authenticate and retrieve the access token (Initial step that doesn't support logging in via Github etc.)

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -7,6 +7,8 @@ datetime.dayOfWeek=EE
 # Main View
 main.title=Übersicht
 main.refresh=Aktualisieren
+main.login=Einloggen
+main.logout=Ausloggen
 
 # Schedule View
 schedule.title=Zeitplan
