--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -7,6 +7,8 @@ datetime.dayOfWeek=EE
 # Main View
 main.title=Overview
 main.refresh=Refresh
+main.login=Login
+main.logout=Logout
 
 # Schedule View
 schedule.title=Schedule
