- Fixed some I18N problems -

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -2,7 +2,7 @@
 dateTime.dateTime=dd.MM.yyyy HH:mm
 dateTime.time=HH:mm
 dateTime.date=dd.MM.yyyy
-datetime.dayOfWeek=EE
+datetime.dayOfWeek=EEE
 
 # Main View
 main.title=Übersicht
