--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -2,7 +2,7 @@
 dateTime.dateTime=MM/dd/yyyy h:mm
 dateTime.time=h:mm
 dateTime.date=MM/dd/yyyy
-datetime.dayOfWeek=EE
+datetime.dayOfWeek=EEE
 
 # Main View
 main.title=Overview
