- Started refactoring the client to reflect the latest changes on the server model - Started implementing "binding/Unbinding" of keycloak accounts

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -38,4 +38,7 @@ talks.more=mehr...
 # Settings View
 settings.title=Einstellungen
 settings.language=Sprache
+settings.server-account=Server Account
+settings.server-account.bind=Verbinden
+settings.server-account.unbind=Trennen
 
