--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -38,3 +38,6 @@ talks.more=more...
 # Settings View
 settings.title=Settings
 settings.language=Language
+settings.server-account=Server Account
+settings.server-account.bind=Connect
+settings.server-account.unbind=Disconnect
