- Hard-Coded the supported Languages to prevent new Languages in the Conference Data to break the application "germanenglish"

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -2,7 +2,10 @@
 dateTime.dateTime=dd.MM.yyyy HH:mm
 dateTime.time=HH:mm
 dateTime.date=dd.MM.yyyy
-datetime.dayOfWeek=EEE
+dateTime.dayOfWeek=EEE
+
+language.en_US=English
+language.de_DE=Deutsch
 
 # Main View
 main.title=Übersicht
