--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -2,7 +2,10 @@
 dateTime.dateTime=MM/dd/yyyy h:mm
 dateTime.time=h:mm
 dateTime.date=MM/dd/yyyy
-datetime.dayOfWeek=EEE
+dateTime.dayOfWeek=EEE
+
+language.en_US=English
+language.de_DE=Deutsch
 
 # Main View
 main.title=Overview
