- Fixed the Keycloak integration - Finished the "Bind with Server account" feature in the settings

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -44,4 +44,5 @@ settings.language=Sprache
 settings.server-account=Server Account
 settings.server-account.bind=Verbinden
 settings.server-account.unbind=Trennen
+settings.server-account.connected=Verbunden über {0}
 
