--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -44,3 +44,4 @@ settings.language=Language
 settings.server-account=Server Account
 settings.server-account.bind=Connect
 settings.server-account.unbind=Disconnect
+settings.server-account.connected=Connected using {0}
