- Added some general purpose popup dialogs (ok, yes-no, select) - If the used wants to disconnect from the server, show a popup dialog that he has to confirm - If the user connects and has both local and remote preferences open a popup and ask the user how he wants to consolidate the two sets of preferences

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -3,6 +3,9 @@ dateTime.dateTime=dd.MM.yyyy HH:mm
 dateTime.time=HH:mm
 dateTime.date=dd.MM.yyyy
 dateTime.dayOfWeek=EEE
+yes=Ja
+no=Nein
+ok=Ok
 
 language.en_US=English
 language.de_DE=Deutsch
@@ -45,4 +48,8 @@ settings.server-account=Server Account
 settings.server-account.bind=Verbinden
 settings.server-account.unbind=Trennen
 settings.server-account.connected=Verbunden über {0}
-
+settings.server-account.confirm-unbind=Sind Sie sicher, dass Sie die Server-Verknüpfung aufheben wollen?
+settings.server-account.select-preferences-merge-strategy=Es wurden sowohl auf dem Server als auch in der App Favoriten hinterlegt, wie sollen die Datenbestände zusammengeführt werden?
+settings.server-account.select-preferences-merge-strategy.server=Alle Favoriten vom Server
+settings.server-account.select-preferences-merge-strategy.client=Alle Favoriten von der App
+settings.server-account.select-preferences-merge-strategy.merge=Alle Favoriten zusammenführen
