--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -3,6 +3,9 @@ dateTime.dateTime=MM/dd/yyyy h:mm
 dateTime.time=h:mm
 dateTime.date=MM/dd/yyyy
 dateTime.dayOfWeek=EEE
+yes=Yes
+no=No
+ok=Ok
 
 language.en_US=English
 language.de_DE=Deutsch
@@ -45,3 +48,8 @@ settings.server-account=Server Account
 settings.server-account.bind=Connect
 settings.server-account.unbind=Disconnect
 settings.server-account.connected=Connected using {0}
+settings.server-account.confirm-unbind=Are you sure you want to disconnect your server profile?
+settings.server-account.select-preferences-merge-strategy=Preferences were returned from the Server as well as the app. How should the two sets of preferences be merged?
+settings.server-account.select-preferences-merge-strategy.server=Use server preferences
+settings.server-account.select-preferences-merge-strategy.client=Use app preferences
+settings.server-account.select-preferences-merge-strategy.merge=Merge preferences
