- Cleaned up dead code - Implemented the Etag support - Split up theUserPreferenceController into a local and remote one - Fine-tuned the SelectDialog - Added a popup if the user selects a favorite and isn't logged in

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -6,6 +6,7 @@ dateTime.dayOfWeek=EEE
 yes=Ja
 no=Nein
 ok=Ok
+cancel=Abbrechen
 
 language.en_US=English
 language.de_DE=Deutsch
@@ -13,8 +14,8 @@ language.de_DE=Deutsch
 # Main View
 main.title=Übersicht
 main.refresh=Aktualisieren
-main.login=Einloggen
-main.logout=Ausloggen
+main.last-changes=Letzte Änderungen:
+main.never-loaded=Nie
 
 # Schedule View
 schedule.title=Zeitplan
@@ -53,3 +54,4 @@ settings.server-account.select-preferences-merge-strategy=Es wurden sowohl auf d
 settings.server-account.select-preferences-merge-strategy.server=Alle Favoriten vom Server
 settings.server-account.select-preferences-merge-strategy.client=Alle Favoriten von der App
 settings.server-account.select-preferences-merge-strategy.merge=Alle Favoriten zusammenführen
+settings.server-account.confirm-not-server-backed=Sie sind zur zeit nicht mit einem Server Account verbunden. Favoriten werden nur innerhalb der App gespeichert. Wenn Sie Ihre Favoriten mit dem DukeCon Server synchronisieren möchten, klicken Sie bitte in den Einstellungen auf 'Verbinden'.
