--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -6,6 +6,7 @@ dateTime.dayOfWeek=EEE
 yes=Yes
 no=No
 ok=Ok
+cancel=Cancel
 
 language.en_US=English
 language.de_DE=Deutsch
@@ -13,8 +14,8 @@ language.de_DE=Deutsch
 # Main View
 main.title=Overview
 main.refresh=Refresh
-main.login=Login
-main.logout=Logout
+main.last-changes=Last Changes:
+main.never-loaded=Never
 
 # Schedule View
 schedule.title=Schedule
@@ -53,3 +54,4 @@ settings.server-account.select-preferences-merge-strategy=Preferences were retur
 settings.server-account.select-preferences-merge-strategy.server=Use server preferences
 settings.server-account.select-preferences-merge-strategy.client=Use app preferences
 settings.server-account.select-preferences-merge-strategy.merge=Merge preferences
+settings.server-account.confirm-not-server-backed=Currently you are not connected with a server-backed account. Favorites are not saved outside this app. If you want to synchronize with the DukeCon server, please click on 'Connect' in the application setting.
