- Renamed Tracks to Streams

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -24,9 +24,9 @@ schedule.title=Zeitplan
 locations.title=Räume
 location.title=Raum
 
-# Tracks View
-tracks.title=Tracks
-track.title=Track
+# Streams View
+streams.title=Streams
+stream.title=Stream
 
 # Speakers View
 speakers.title=Referenten
@@ -35,7 +35,7 @@ speaker.title=Referent
 # Talks View
 talks.time=Zeit
 talks.room=Raum
-talks.track=Track
+talks.stream=Stream
 talks.rating=Bewertung
 talks.rating.bad=Schl.
 talks.rating.avg=Mittel
