--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -24,9 +24,9 @@ schedule.title=Schedule
 locations.title=Locations
 location.title=Location
 
-# Tracks View
-tracks.title=Tracks
-track.title=Track
+# Streams View
+streams.title=Streams
+stream.title=Stream
 
 # Speakers View
 speakers.title=Speakers
@@ -35,7 +35,7 @@ speaker.title=Speaker
 # Talks View
 talks.time=Time
 talks.room=Location
-talks.track=Track
+talks.stream=Stream
 talks.rating=Rating
 talks.rating.bad=Bad
 talks.rating.avg=Avg.
