- Added a Conference selection view as initial starting point
Changed the application logic to display a conference-selection view if no conference is currently selected. If a user has selected a conference and is opening the application, the application immediately goes to the selected conference until the user explicitly leaves the conference.

--- a/core/src/main/locales/de_DE/dukecon.properties
+++ b/core/src/main/locales/de_DE/dukecon.properties
@@ -17,6 +17,9 @@ main.refresh=Aktualisieren
 main.last-changes=Letzte Änderungen:
 main.never-loaded=Nie
 
+# Conferences View
+conferences.title=Konferenzen
+
 # Schedule View
 schedule.title=Zeitplan
 
@@ -44,6 +47,7 @@ talks.more=mehr...
 
 # Settings View
 settings.title=Einstellungen
+settings.leave-conference=Konferenz verlassen
 settings.language=Sprache
 settings.server-account=Server Account
 settings.server-account.bind=Verbinden
