--- a/core/src/main/locales/en_US/dukecon.properties
+++ b/core/src/main/locales/en_US/dukecon.properties
@@ -17,6 +17,9 @@ main.refresh=Refresh
 main.last-changes=Last Changes:
 main.never-loaded=Never
 
+# Conferences View
+conferences.title=Conferences
+
 # Schedule View
 schedule.title=Schedule
 
@@ -44,6 +47,7 @@ talks.more=more...
 
 # Settings View
 settings.title=Settings
+settings.leave-conference=Leave conference
 settings.language=Language
 settings.server-account=Server Account
 settings.server-account.bind=Connect
